--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <div class="row">
             <div class="col-md-4 col-lg-3 mb-5">
                 <div class="text-center projetContainer">
-                    <a href="https://github.com/joncarriere/Lords-of-Conjury"><img src="assets/img/loc.png" alt="" class="w-100" /></a>
+                    <a href="https://joncarriere.github.io/Lords-of-Conjury/"><img src="assets/img/loc.png" alt="" class="w-100" /></a>
                     <p class="mt-2"><span class="font-weight-bold">Lords of Conjury</span><br>Premiers pas de
                         développeur web...</p>
                     <button type="button" class="btn btnProject" data-toggle="modal" data-target="#locModal">+
@@ -147,7 +147,7 @@
             </div>
             <div class="col-md-4 col-lg-3 mb-5">
                 <div class="text-center projetContainer">
-                    <a href="https://github.com/joncarriere/La-Roue-Tourne"><img src="assets/img/logobike.svg" alt="logo de la boutique La Roue Tourne" height="45px" /></a>
+                    <a href="https://joncarriere.github.io/La-Roue-Tourne/"><img src="assets/img/logobike.svg" alt="logo de la boutique La Roue Tourne" height="45px" /></a>
                     <p><span class="font-weight-bold">La Roue Tourne</span><br>Projet JavaScript</p>
                     <button type="button" class="btn btnProject" data-toggle="modal" data-target="#jsModal">+
                         d'infos
