--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>CV Jonathan Carrière</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
-    <link rel="stylesheet" href="assets\css\cvStyle.css" type="text/css" />
+    <link rel="stylesheet" href="assets\css\style.css" type="text/css" />
 </head>
 
 <body>
@@ -63,20 +63,20 @@
             <div class="col-md-6 col-lg-4 mb-5 skillContainer">
                 <p class="text-center mb-1 font-weight-bold"><i class="fab fa-html5 skillIcon mr-1"></i>HTML</p>
                 <div class="skillBar">
-                    <div id="htmlBar" class="skillValue pr-2 font-weight-bold">60 %</div>
+                    <div id="htmlBar" class="skillValue pr-2 font-weight-bold">50 %</div>
                 </div>
             </div>
             <div class="col-md-6 col-lg-4 mb-5 skillContainer">
                 <p class="text-center mb-1 font-weight-bold"><i class="fab fa-css3-alt skillIcon mr-1"></i>CSS</p>
                 <div class="skillBar">
-                    <div id="cssBar" class="skillValue pr-2 font-weight-bold">60 %</div>
+                    <div id="cssBar" class="skillValue pr-2 font-weight-bold">50 %</div>
                 </div>
             </div>
             <div class="col-md-6 col-lg-4 mb-5 skillContainer">
                 <p class="text-center mb-1 font-weight-bold"><i class="fab fa-bootstrap skillIcon mr-1"></i>Bootstrap
                 </p>
                 <div class="skillBar">
-                    <div id="bootBar" class="skillValue pr-2 font-weight-bold">60 %</div>
+                    <div id="bootBar" class="skillValue pr-2 font-weight-bold">50 %</div>
                 </div>
             </div>
             <div class="col-md-6 col-lg-4 mb-5 skillContainer">
@@ -112,10 +112,10 @@
         <h2 id="projets" class="text-center mb-5 sectionTitle">&#35;Projets</h2>
         <div class="row">
             <div class="col-md-4 col-lg-3 mb-5">
-                <div class="text-center projetContainer">
+                <div class="text-center projetContainer pt-3 pb-3 px-2">
                     <a href="https://joncarriere.github.io/Lords-of-Conjury/"><img src="assets/img/loc.png" alt="" class="w-100" /></a>
                     <p class="mt-2"><span class="font-weight-bold">Lords of Conjury</span><br>Premiers pas de
-                        développeur web...</p>
+                        développeur</p>
                     <button type="button" class="btn btnProject" data-toggle="modal" data-target="#locModal">+
                         d'infos
                     </button>
@@ -146,7 +146,7 @@
                 </div>
             </div>
             <div class="col-md-4 col-lg-3 mb-5">
-                <div class="text-center projetContainer">
+                <div class="text-center projetContainer py-3 px-2">
                     <a href="https://joncarriere.github.io/La-Roue-Tourne/"><img src="assets/img/logobike.svg" alt="logo de la boutique La Roue Tourne" height="45px" /></a>
                     <p><span class="font-weight-bold">La Roue Tourne</span><br>Projet JavaScript</p>
                     <button type="button" class="btn btnProject" data-toggle="modal" data-target="#jsModal">+
@@ -187,7 +187,7 @@
                 </div>
             </div>
             <div class="col-md-4 col-lg-3 mb-5">
-                <div class="text-center projetContainer">
+                <div class="text-center projetContainer pt-3 pb-2 px-2">
                     <a href="https://github.com/joncarriere/calendrier"><img src="assets/img/chaton.jpg" alt="un chaton" height="45px" /></a>
                     <p class="mt-2"><span class="font-weight-bold">Calendrier</span><br>Projet PHP</p>
                     <button type="button" class="btn btnProject" data-toggle="modal" data-target="#calendarModal">+
@@ -218,7 +218,7 @@
                 </div>
             </div>
             <div class="col-md-4 col-lg-3 mb-5">
-                <div id="meepleCont" class="text-center projetContainer">
+                <div id="meepleCont" class="text-center projetContainer pt-3 pb-2 px-2">
                     <img src="assets/img/meeple.svg" alt="un meeple" height="45px" />
                     <p class="mt-2"><span class="font-weight-bold">Le Meeple Savant</span><br>Work in progress...</p>
                     <button type="button" class="btn btnProject" data-toggle="modal" data-target="#meepleModal">+
@@ -262,7 +262,7 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4 class="timeline-title">Développeur Web et Web Mobile</h4>
-                                <p class="h5 text-muted">2020-2021</p>
+                                <p class="h4 text-muted">2020-2021</p>
                             </div>
                             <div class="timeline-body">
                                 <p><span class="font-weight-bold "><a href="https://lamanu.fr/" class="text-dark">La
@@ -273,7 +273,7 @@
                                         href="https://www.francecompetences.fr/recherche/rncp/31114/">RNCP 31114</a>).
                                 </p>
                                 <ul>
-                                    <li>Conception de page web dynamiques adaptables aux différentes tailles d'écrans
+                                    <li>Conception de pages web dynamiques adaptables aux différentes tailles d'écrans
                                     </li>
                                     <li>Traitement des données côté serveur à l'aide de PHP</li>
                                     <li>Création de bases de données</li>
@@ -287,7 +287,7 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4 class="timeline-title">Opérateur de fabrication</h4>
-                                <p class="h5 text-muted">2019</p>
+                                <p class="h4 text-muted">2019</p>
                             </div>
                             <div class="timeline-body">
                                 <p><span class="font-weight-bold">Chanel Parfums Beauté</span><br /><span
@@ -304,7 +304,7 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4 class="timeline-title">Opérateur de fabrication</h4>
-                                <p class="h5 text-muted">2017-2018</p>
+                                <p class="h4 text-muted">2017-2018</p>
                             </div>
                             <div class="timeline-body">
                                 <p><span class="font-weight-bold">Sanofi Winthrop Industrie</span><br /><span
@@ -323,7 +323,7 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4 class="timeline-title">Opérateur de fabrication</h4>
-                                <p class="h5 text-muted">2015-2016</p>
+                                <p class="h4 text-muted">2015-2016</p>
                             </div>
                             <div class="timeline-body">
                                 <p><span class="font-weight-bold">Chanel Parfums Beauté</span><br /><span
@@ -341,7 +341,7 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4 class="timeline-title">Opérateur de fabrication</h4>
-                                <p class="h5 text-muted">2012-2014</p>
+                                <p class="h4 text-muted">2012-2014</p>
                             </div>
                             <div class="timeline-body">
                                 <p><span class="font-weight-bold">Beauté, Recherche et Industries</span><br /><span
@@ -400,6 +400,7 @@
                             </div>
                             <div class="timeline-body">
                                 <p>Lycée Jean Calvin, Noyon.</p>
+                                <p class="h4 text-muted">1998</p>
                             </div>
                         </div>
                     </li>
